# cnpy

./: CMakeLists.txt  README.md  cnpyConfig.cmake.in
install/lib/: cnpy.lib
install/share/cmake/cnpy/: cnpyConfig-debug.cmake  cnpyConfig.cmake  cnpyTarget-debug.cmake  cnpyTarget.cmake
